--- a/index.html
+++ b/index.html
@@ -39,38 +39,40 @@
 <body class="backgroundCustom">
     <nav class="navbar navbar-expand-lg navbarCustomize">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="codeNotes.html">
                 <img src="res/img/img01_brandLogo.png" alt="code notes logo" width="30" height="24">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <i class="bi bi-arrow-down-left-square-fill text-success"></i> 
-      </span>
-    </button>
+             <i class="bi bi-arrow-down-left-square-fill text-success"></i>
+             </span>
+           </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 navCustomText">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                        <a class="linkMenu nav-link active" aria-current="page" href="#">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">BR-ARG</a>
+                        <a class="linkMenu nav-link" href="#">BR-ARG</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="linkMenu nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          CODE NOTES
-          </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item lenguajeName" href="#">HTML</a></li>
+                            FRONT-END #21
+                        </a>
+
+                        <ul class="linkDPrincipal dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="linkDprincipal dropdown-item" href="#">HTML</a></li>
                             <li><a class="dropdown-item tpLink" href="#">TP #01</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item  lenguajeName" href="#">CSS</a></li>
+                            <li><a class="linkDprincipal dropdown-item" href="#">CSS</a></li>
                             <li><a class="dropdown-item tpLink" href="#">TP #02</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item lenguajeName" href="#">JS BASICO</a></li>
-                            <li><a class="dropdown-item tpLink" href="#">TP #03</a></li>
+                            <li><a class="linkDprincipal dropdown-item" href="#">JS BASICO</a></li>
+                            <li><a class="dropdown-item tpLink" href="#">TP #03</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -86,8 +88,9 @@
             </div>
         </div>
     </nav>
+    <hr/>
 
-
+    <!--SLIDE START-->
     <div class="container mt-4 slideBackGround">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
