--- a/codeNotes.html
+++ b/codeNotes.html
@@ -35,10 +35,10 @@
     <link rel="stylesheet" href="res/CSS/codenotes.css" />
 
 
-    <title>CODE NOTES - PROPUESTA</title>
+    <title>PROPUESTA</title>
 </head>
 
-<body class="backgroundCustom">
+<body class="backgroundCustomCN">
     <nav class="navbar navbar-expand-lg navbarCustomize">
         <div class="container-fluid">
             <a class="navbar-brand" href="codeNotes.html">
@@ -139,7 +139,7 @@
                     From the Firehose
                 </h3>
 
-                <article class="blog-post">
+                <article class="blog-post customBlog">
                     <h2 class="blog-post-title">Sample blog post</h2>
                     <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
 
