--- a/overview.html
+++ b/overview.html
@@ -2,23 +2,17 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
-    <link rel="stylesheet" href="res/CSS/normalize.css" />
 
     <!--GOOGLE FONTS-->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quantico&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Nosifer&display=swap" rel="stylesheet">
-
-
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS v5.0.2 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -35,9 +29,11 @@
     <!--FONT AWESOME-->
     <script src="https://use.fontawesome.com/ebc1616b1a.js"></script>
 
-    <link rel="stylesheet" href="res/CSS/styleAgradecer.css" />
+    <link rel="stylesheet" href="res/CSS/normalize.css" />
+    <link rel="stylesheet" href="res/CSS/stylesheetAll.css" />
 
-    <title>AGRADECIMIENTOS</title>
+
+    <title>BIEN-VENIDOS</title>
 </head>
 
 <body class="backgroundCustom">
@@ -93,19 +89,51 @@
         </div>
     </nav>
     <hr/>
-    <div class="container containerAgradecer">
-        <div class="row">
-            <div class="col">
-                <h1 class="sectionTitle">bst5 notes</h1>
+
+    <!--SLIDE START-->
+    <div class="container mt-4 slideBackGround">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active borderSlider">
+                    <img src="res/img/img02_slider01.png" class="d-block w-100 borderSlider" alt="slide 01">
+                </div>
+                <div class="carousel-item">
+                    <img src="res/img/img03_slider02.png" class="d-block w-100 borderSlider" alt="slide 02">
+                </div>
+                <div class="carousel-item">
+                    <img src="res/img/img04_slider03.png" class="d-block w-100 borderSlider" alt="slide 03">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
         </div>
     </div>
-    </div>
-    </div>
-    </div>
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
+    <!--slide end-->
+
+    <main class="container">
+        <div class="rol">
+            <div class="col">
+                <h1 class="titleCustom">BIEN VENIDO al PROYECTO FINAL</h1>
+                <h2 class="subTitleCustom">Potrero Digital 2021 - Erika Botechia</h2>
+            </div>
+        </div>
+        </div>
+
+
+        <!-- Bootstrap JavaScript Libraries -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
 
 </body>
